--- a/style1.css
+++ b/style1.css
@@ -1,41 +1,32 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;}
 body{
     background-image: linear-gradient(rgba(0,18,51,0.5),rgba(0,18,51,0.5)), url(coinb.jpg);
     font-family: 'Flamenco', cursive;}
-    .left{
-      width: 50%;
-    }
-    .right{
-      width: 50%;
-    }
 .logo{
     height: 40px;}
-    .menu{
-      overflow: hidden;
-      background-color:rgba(0,0,0,0.7);
-      margin: 0px;
-      padding: 0px;}
-    li {
-      float: right; }
-    li a {
-      display: inline-block;
-      color: white;
-      text-align: center;
-      padding: 14px 18px;
-      text-decoration: none; }
-    li a:hover {
-      background-color:#2d75bd;
-    }
-    
+.menu{
+    overflow: hidden;
+    background: #000000;
+    background: rgba(0, 0, 0, 0.7);
+    margin: 0;
+    padding: 0;}
+ li {
+    float: right; 
+  }
+  li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 18px;
+    text-decoration: none; }
+  li a:hover {
+    background-color:#2d75bd;
+  }
   .active{
       background-color:#0466c8;}
-  .text{
-    color:#0466c8;
-    line-height: 12px;
-    margin-left:10px; }
   .content{
     width:1180;
     position: absolute;
@@ -59,7 +50,8 @@ body{
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: rgba(0,0,0,0.6);
+  background: #000000;
+  background: rgba(0, 0, 0, 0.7);
   color: white;
   text-align: center;
 }
