--- a/style2.css
+++ b/style2.css
@@ -1,25 +1,22 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;}
 body{
   background-image: linear-gradient(rgba(0,18,51,0.5),rgba(0,18,51,0.5)), url(coinb.jpg);
   font-family: 'Flamenco', cursive;}
-.left{
-  width: 30%;
-}
-.right{
-  width: 70%;
-}
 .logo{
     height: 40px;}
 .menu{
     overflow: hidden;
-    background-color:rgba(0,0,0,0.7);
-    margin: 0px;
-    padding: 0px;}
+    background: #000000;
+    background: rgba(0, 0, 0, 0.7);
+    margin: 0;
+    padding: 0;}
   li {
-    float: right; }
+    float: right; 
+    list-style:none;
+  }
   li a {
     display: inline-block;
     color: white;
@@ -31,16 +28,18 @@ body{
   }
   .active{
       background-color:#0466c8;}
-  .text{
+  
+.text{
     color:#0466c8;
     line-height: 12px;
-    margin-left:10px; }
-
+    margin-left:10px;
+    margin-top:15px}
  
  h2,h4{
   text-align: center;
   font-weight: bold;
   color: #ffffff;
+  background-color:#000000;
   background-color: rgba(0, 18, 51,0.7);
   padding: 4px;
 }
@@ -61,18 +60,23 @@ table,th,td{
   margin-left: auto;
 }
 th{
+    background-color:#000000;
   background-color:rgba(0,18,51,0.9);
 }
 tr:nth-child(even){
+     background-color:#000000;
   background-color: rgba(4, 102, 200,0.9);
 }
 tr:nth-child(odd){
+     background-color:#000000;
   background-color:rgba(2, 62, 120,0.9);
 }
 tr:nth-child(even):hover{
+     background-color:#000000;
   background-color: rgba(8, 24, 39, 0.9);
 }
 tr:nth-child(odd):hover{
+     background-color:#000000;
   background-color: rgba(8, 24, 39, 0.9);
 }
 .button{
@@ -93,6 +97,7 @@ tr:nth-child(odd):hover{
    width: 45vh ;
    border: 1px solid black;
    border-radius: 2rem;
+    background-color:#000000;
    background-color:rgba(0,18,51,0.7);
   
 }
@@ -112,7 +117,8 @@ tr:nth-child(odd):hover{
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: rgba(0,0,0,0.6);
+   background-color:#000000;
+  background-color: rgba(0,0,0,0.7);
   color: white;
   text-align: center;
 }
